[gd_scene load_steps=26 format=2]

[ext_resource path="res://gameplay/gui/gui.gd" type="Script" id=1]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gameplay/gui/heart.png" type="Texture" id=3]
[ext_resource path="res://gameplay/gui/creation_button_disabled.png" type="Texture" id=4]
[ext_resource path="res://gameplay/gui/creation_button_enabled.png" type="Texture" id=5]
[ext_resource path="res://menus/how_to_play/how_to_play_menu.gd" type="Script" id=6]
[ext_resource path="res://menus/how_to_play/tutorial_panel.tscn" type="PackedScene" id=7]
[ext_resource path="res://menus/how_to_play/steps/welcome.gd" type="Script" id=8]
[ext_resource path="res://menus/how_to_play/steps/data_flow.gd" type="Script" id=9]
[ext_resource path="res://gameplay/data/data.tscn" type="PackedScene" id=10]
[ext_resource path="res://menus/how_to_play/steps/fake_news.gd" type="Script" id=11]
[ext_resource path="res://menus/how_to_play/steps/fact_checkers.gd" type="Script" id=12]
[ext_resource path="res://gameplay/data_filter/data_filter.tscn" type="PackedScene" id=13]
[ext_resource path="res://menus/how_to_play/steps/scan.gd" type="Script" id=14]
[ext_resource path="res://menus/how_to_play/steps/fake_news_life.gd" type="Script" id=15]
[ext_resource path="res://menus/how_to_play/steps/valid_news_score.gd" type="Script" id=16]
[ext_resource path="res://menus/how_to_play/steps/improvements.gd" type="Script" id=17]
[ext_resource path="res://menus/how_to_play/steps/time.gd" type="Script" id=18]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.811765, 0.572549, 0.572549, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.443137, 0.105882, 0.105882, 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.121569, 0.345098, 0.509804, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.0509804, 0.243137, 0.321569, 1 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.239216, 0.52549, 0.345098, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.0196078, 0.333333, 0.054902, 1 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 2 )

[node name="how_to_play_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="gui" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1080.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="margin_container" type="MarginContainer" parent="gui"]
anchor_right = 1.0
margin_bottom = 120.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="top_bar" type="HBoxContainer" parent="gui/margin_container"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 110.0

[node name="life_panel" type="Panel" parent="gui/margin_container/top_bar"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 50 )
custom_styles/panel = SubResource( 1 )

[node name="life_label" type="Label" parent="gui/margin_container/top_bar/life_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 90.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 2 )
text = "100"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="gui/margin_container/top_bar/life_panel"]
position = Vector2( 52, 45 )
rotation = -0.785398
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="timer_container" type="CenterContainer" parent="gui/margin_container/top_bar"]
margin_left = 204.0
margin_right = 1696.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="timer_panel" type="Panel" parent="gui/margin_container/top_bar/timer_container"]
margin_left = 646.0
margin_right = 846.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
custom_styles/panel = SubResource( 3 )

[node name="timer_label" type="Label" parent="gui/margin_container/top_bar/timer_container/timer_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "0:00"
align = 1
valign = 1

[node name="score_panel" type="Panel" parent="gui/margin_container/top_bar"]
margin_left = 1700.0
margin_right = 1900.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
custom_styles/panel = SubResource( 5 )

[node name="score_label" type="Label" parent="gui/margin_container/top_bar/score_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 6 )
text = "100"
align = 1
valign = 1

[node name="creation_button" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 944.0
margin_right = 266.0
margin_bottom = 1194.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 4 )

[node name="label" type="Label" parent="creation_button"]
margin_left = 33.0
margin_top = 177.0
margin_right = 226.0
margin_bottom = 223.0
custom_fonts/font = SubResource( 7 )
text = "COST: 100"
align = 1
valign = 1

[node name="steps" type="Node" parent="."]

[node name="welcome" type="Node2D" parent="steps"]
visible = false
script = ExtResource( 8 )

[node name="position" type="Position2D" parent="steps/welcome"]
position = Vector2( 679, 438 )

[node name="data_flow" type="Node2D" parent="steps"]
visible = false
script = ExtResource( 9 )

[node name="data" parent="steps/data_flow" instance=ExtResource( 10 )]
position = Vector2( 1202, 349 )

[node name="data2" parent="steps/data_flow" instance=ExtResource( 10 )]
position = Vector2( 1852, 507 )

[node name="data3" parent="steps/data_flow" instance=ExtResource( 10 )]
position = Vector2( 541, 775 )

[node name="position" type="Position2D" parent="steps/data_flow"]
position = Vector2( 679, 438 )

[node name="fake_news" type="Node2D" parent="steps"]
visible = false
script = ExtResource( 11 )

[node name="position" type="Position2D" parent="steps/fake_news"]
position = Vector2( 679, 438 )

[node name="fact_checkers" type="Node2D" parent="steps"]
visible = false
script = ExtResource( 12 )

[node name="position" type="Position2D" parent="steps/fact_checkers"]
position = Vector2( 200, 854 )

[node name="scan" type="Node2D" parent="steps"]
visible = false
script = ExtResource( 14 )

[node name="data_filter" parent="steps/scan" instance=ExtResource( 13 )]
position = Vector2( 945, 537 )

[node name="position" type="Position2D" parent="steps/scan"]
position = Vector2( 773, 754 )

[node name="fake_news" parent="steps/scan" instance=ExtResource( 10 )]
position = Vector2( 881, 719 )

[node name="valid_news" parent="steps/scan" instance=ExtResource( 10 )]
position = Vector2( 1057, 350 )

[node name="fake_news_life" type="Node2D" parent="steps"]
visible = false
script = ExtResource( 15 )

[node name="position" type="Position2D" parent="steps/fake_news_life"]
position = Vector2( 24, 138 )

[node name="valid_news_score" type="Node2D" parent="steps"]
visible = false
script = ExtResource( 16 )

[node name="position" type="Position2D" parent="steps/valid_news_score"]
position = Vector2( 1291, 135 )

[node name="improvements" type="Node2D" parent="steps"]
visible = false
script = ExtResource( 17 )

[node name="data_filter" parent="steps/improvements" instance=ExtResource( 13 )]
position = Vector2( 588, 542 )

[node name="position" type="Position2D" parent="steps/improvements"]
position = Vector2( 764, 446 )

[node name="time" type="Node2D" parent="steps"]
visible = false
script = ExtResource( 18 )

[node name="position" type="Position2D" parent="steps/time"]
position = Vector2( 685, 124 )

[node name="tutorial_panel" parent="." instance=ExtResource( 7 )]

[connection signal="main_menu_button_pressed" from="tutorial_panel" to="." method="_on_tutorial_panel_main_menu_button_pressed"]
[connection signal="next_button_pressed" from="tutorial_panel" to="." method="_on_tutorial_panel_next_button_pressed"]
[connection signal="previous_button_pressed" from="tutorial_panel" to="." method="_on_tutorial_panel_previous_button_pressed"]
